Modal: fixed a weird behavior on line height
when this was 18px, .kdmodal modal-content was showing scrollbars where it shouldnt.

--- a/client/Main/styl/resurrection.commons.styl
+++ b/client/Main/styl/resurrection.commons.styl
@@ -719,7 +719,7 @@ button.app-settings-menu
     margin              15px 0 0 0 !important
     padding             0 !important
     font-size           16px !important
-    line-height         18px !important
+    line-height         22px !important
 
     .modalformline
       padding           0
